added and fixed upload issues
